--- a/rsvp/rsvp.html
+++ b/rsvp/rsvp.html
@@ -36,7 +36,7 @@
             <select id="kehr" name="kehr">
                 <option value="Ja">Safe!</option>
                 <option value="Nein">Neee sorry :( </option>
-                <option value="KeinCisMann">Kein Cis-Mann hehe</option>
+                <option value="KeinCisMann">Kein Cis-Mann hehe *streik*</option>
             </select>
             
             <button type="submit"><p>Submit</p></button>
