--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="spacer"></div>
         <a class="a"  target="_blank" href="https://www.google.com/maps/place/Kinzigstraße+9,+10247+Berlin/@52.5137029,13.463577,17z/data=!3m1!4b1!4m6!3m5!1s0x47a84ef54e6cf8f1:0x89ef8250bdc6cf36!8m2!3d52.5136997!4d13.4661519!16s%2Fg%2F11bw40m1g9?entry=ttu">k9</a> 
     </div>
-    <div class="flx3"><p class="ps">Eingang durch <br>die Bar "loge"</p></div>
+    <div class="flx3"><p class="ps">Eingang durch <br>die Bar »loge«</p></div>
 </div>
         
 
