--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             Und zusammen machen wir 'ne Soliparty draus, woop!
             Wie sich das für ein Soiree gehört, 
             gibt es ab 22 Uhr ein Programm erlesener Künstler*innen 
-            und danach zertanzen wir unsere Schuh! 
+            und danach zertanzen wir unsere Schuh! <br><br>
             Dresscode: Dress to impress!</p>
         
         </div>
